# technical-documentation

./: .gitignore
.gitignore/: .gitignore
CHANGELOG/: CHANGELOG.md
LICENSE/python/: MIT-X11_LICENSE
README/: README.md
README/Programs/: README.md
README/Software-Apps/: README.md
gitignore/: .gitignore
project-configurations/pypi/: pyproject.toml
project-configurations/python-flask-app/: pyproject.toml  setup.py
