[project]
name = "<PROJECT_NAME>"
version = "<VERSION_NUMBER>"
authors = [
    { name="Dani", email="daniasestan@gmail.com" },
]
description = "<PROJECT_DESCRIPTION>"
readme = "README.md"
requires-python = ">=<PYTHON_VERSION>"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "build==1.4.0",
    "twine==6.2.0"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
